--- a/calc.html
+++ b/calc.html
@@ -22,7 +22,7 @@
             <tr>
                 <td colspan="8">
                     <select id="ddlServant">
-                        <option value="-1">|----------------------请选择从者-------------------------|</option>
+                        <option value=-1>|----------------------请选择从者-------------------------|</option>
                     </select>
                     <label for="ckIsMaxGrail">
                         <input type="checkbox" id="ckIsMaxGrail" />圣杯MAX
@@ -37,31 +37,31 @@
                 <td>等级</td>
                 <td>
                     <select id="ddlLvs">
-                        <option value="-1">默认</option>
-                        <option value="100">Lv.100</option>
-                        <option value="90">Lv.90</option>
-                        <option value="80">Lv.80</option>
-                        <option value="70">Lv.70</option>
-                        <option value="65">Lv.65</option>
-                        <option value="60">Lv.60</option>
+                        <option value=-1>默认</option>
+                        <option value=100>Lv.100</option>
+                        <option value=90>Lv.90</option>
+                        <option value=80>Lv.80</option>
+                        <option value=70>Lv.70</option>
+                        <option value=65>Lv.65</option>
+                        <option value=60>Lv.60</option>
                     </select>
                 </td>
                 <td>从者职介</td>
                 <td>
                     <select id="ddlClass">
-                        <option value="1.0">Saber</option>
-                        <option value="0.95">Archer</option>
-                        <option value="1.05">Lancer</option>
-                        <option value="1.0">Rider</option>
-                        <option value="0.9">Caster</option>
-                        <option value="0.9">Assassin</option>
-                        <option value="1.1">Berserker</option>
-                        <option value="1.1">Ruler</option>
-                        <option value="1.1">Avenger</option>
-                        <option value="1.0">Shielder</option>
-                        <option value="1.0">MoonCancer</option>
-                        <option value="1.0">Alterego</option>
-                        <option value="1.0">Foreigner</option>
+                        <option value=1>Saber</option>
+                        <option value=0.95>Archer</option>
+                        <option value=1.05>Lancer</option>
+                        <option value=1>Rider</option>
+                        <option value=0.9>Caster</option>
+                        <option value=0.9>Assassin</option>
+                        <option value=1.1>Berserker</option>
+                        <option value=1.1>Ruler</option>
+                        <option value=1.1>Avenger</option>
+                        <option value=1>Shielder</option>
+                        <option value=1>MoonCancer</option>
+                        <option value=1>Alterego</option>
+                        <option value=1>Foreigner</option>
                     </select>
                 </td>
                 <td>阵营</td>
@@ -110,9 +110,9 @@
                 <td>卡色</td>
                 <td>
                     <select id="ddlColor">
-                        <option value="0.8">Quick</option>
-                        <option value="1">Arts</option>
-                        <option value="1.5">Buster</option>
+                        <option value=0.8>Quick</option>
+                        <option value=1>Arts</option>
+                        <option value=1.5>Buster</option>
                     </select>
                 </td>
                 <td>Hit数</td>
@@ -123,14 +123,14 @@
                 <td>宝具等级</td>
                 <td>
                     <select id="ddlNpLevel">
-                        <option value="0">1</option>
-                        <option value="1">2</option>
-                        <option value="2">3</option>
-                        <option value="3">4</option>
-                        <option value="4">5</option>
+                        <option value=0>1</option>
+                        <option value=1>2</option>
+                        <option value=2>3</option>
+                        <option value=3>4</option>
+                        <option value=4>5</option>
                     </select>
                     <label for="ckIsSpecialAttack">
-                        <input type="checkbox" id="ckIsSpecialAttack" value="1" /> 特攻
+                        <input type="checkbox" id="ckIsSpecialAttack" /> 特攻
                     </label>
                 </td>
                 <td>宝具倍率(%)</td>
@@ -156,19 +156,19 @@
                 <td>职介克制</td>
                 <td>
                     <select id="ddlClassResist">
-                        <option value="2.0">普通克制</option>
-                        <option value="1.5">狂阶克制</option>
-                        <option value="1.0">非克制</option>
-			<option value="0.5">被克制</option>
-                        <option value="1.2">Alterego-Beast III</option>
+                        <option value=2>普通克制</option>
+                        <option value=1.5>狂阶克制</option>
+                        <option value=1>非克制</option>
+			<option value=0.5>被克制</option>
+                        <option value=1.2>Alterego-Beast III</option>
                     </select>
                 </td>
                 <td>阵营克制</td>
                 <td>
                     <select id="ddlAttributeResist">
-                        <option value="1.0">非克制</option>
-                        <option value="1.1">克制</option>
-                        <option value="0.9">被克制</option>
+                        <option value=1>非克制</option>
+                        <option value=1.1>克制</option>
+                        <option value=0.9>被克制</option>
                     </select>
                 </td>
             </tr>
@@ -227,40 +227,40 @@
 		<td>敌人1</td>
 		<td>
 		    <select id="ddlEnemyClass1">
-                        <option value="1.0">Default</option>
-                        <option value="0.8">Berserker</option>
-                        <option value="0.9">Assassin</option>
-                        <option value="1.1">Rider</option>
-                        <option value="1.2">Caster/MC</option>
+                        <option value=1>Default</option>
+                        <option value=0.8>Berserker</option>
+                        <option value=0.9>Assassin</option>
+                        <option value=1.1>Rider</option>
+                        <option value=1.2>Caster/MC</option>
                     </select>
 		    <label for="ckIsUndying1">
-                        <input type="checkbox" id="ckIsUndying1" value="1" /> 死灵
+                        <input type="checkbox" id="ckIsUndying1" /> 死灵
                     </label>
 		</td>
 		<td>敌人2</td>
 		<td>
                     <select id="ddlEnemyClass2">
-                        <option value="1.0">Default</option>
-                        <option value="0.8">Berserker</option>
-                        <option value="0.9">Assassin</option>
-                        <option value="1.1">Rider</option>
-                        <option value="1.2">Caster/MC</option>
+                        <option value=1>Default</option>
+                        <option value=0.8>Berserker</option>
+                        <option value=0.9>Assassin</option>
+                        <option value=1.1>Rider</option>
+                        <option value=1.2>Caster/MC</option>
                     </select>
                     <label for="ckIsUndying2">
-                        <input type="checkbox" id="ckIsUndying2" value="1" /> 死灵
+                        <input type="checkbox" id="ckIsUndying2" /> 死灵
                     </label>
 		</td>
                 <td>敌人3</td>
                 <td>
                     <select id="ddlEnemyClass3">
-                        <option value="1.0">Default</option>
-                        <option value="0.8">Berserker</option>
-                        <option value="0.9">Assassin</option>
-                        <option value="1.1">Rider</option>
-                        <option value="1.2">Caster/MC</option>
+                        <option value=1>Default</option>
+                        <option value=0.8>Berserker</option>
+                        <option value=0.9>Assassin</option>
+                        <option value=1.1>Rider</option>
+                        <option value=1.2>Caster/MC</option>
                     </select>
                     <label for="ckIsUndying3">
-                        <input type="checkbox" id="ckIsUndying3" value="1" /> 死灵
+                        <input type="checkbox" id="ckIsUndying3" /> 死灵
                     </label>
                 </td>
 	    </tr>
@@ -355,7 +355,7 @@
     //圣杯MAX勾选框改变事件
     $("ckIsMaxGrail").onchange = function () {
         let id = $("ddlServant").value;
-        if (id == "-1") {
+        if (id == -1) {
             this.checked = false;
             return;
         }
@@ -363,19 +363,19 @@
         if (this.checked) {
             $("txtAttack").value = servant.maxAtk;
             $("txtMaxHp").value = servant.maxHp;
-            $("ddlLvs").selectedIndex=1;
+            $("ddlLvs").selectedIndex = 1;
         }
         else {
             $("txtAttack").value = servant.atk;
             $("txtMaxHp").value = servant.hp;
-            $("ddlLvs").selectedIndex=0;
+            $("ddlLvs").selectedIndex = 0;
         }
 	adjHp();
     }
     //等级下拉列表选中项改变事件
     $("ddlLvs").onchange=function(){
         let id=$("ddlServant").value;
-        if (id == "-1") {
+        if (id == -1) {
             this.selectedIndex = 0;
             return;
         }
@@ -435,7 +435,7 @@
     //宝具等级选中项发生变化事件
     $("ddlNpLevel").onchange = function () {
         let id = $("ddlServant").value;
-        if(id == "-1"){
+        if(id == -1){
             return;
         }
         changeNpCoefficient();
@@ -547,7 +547,7 @@
     var cardNpBase = [1, 3, 0];
     //计算宝具伤害
     function calc() {
-        if ($("ddlServant").value == "-1") {
+        if ($("ddlServant").value == -1) {
             alert("请选择从者")
             return;
         }
@@ -628,7 +628,7 @@
                 npGainBuff += 10;
 	}
 	//15.御主装备
-	npStrength += parseInt($("ddlMysticCode").value);
+	npStrength += getInt("ddlMysticCode");
 	switch($("ddlMysticCode").selectedIndex) {
 	    case 1:
 		attackBuff += 30;
