--- a/calc2.html
+++ b/calc2.html
@@ -22,7 +22,7 @@
             <tr>
                 <td colspan="8">
                     <select id="ddlServant">
-                        <option value="-1">|----------------------请选择从者-------------------------|</option>
+                        <option value=-1>|----------------------请选择从者-------------------------|</option>
                     </select>
                     <label for="ckIsMaxGrail">
                         <input type="checkbox" id="ckIsMaxGrail" />圣杯MAX
@@ -34,31 +34,31 @@
                 <td>等级</td>
                 <td>
                     <select id="ddlLvs">
-                        <option value="-1">默认</option>
-                        <option value="100">Lv.100</option>
-                        <option value="90">Lv.90</option>
-                        <option value="80">Lv.80</option>
-                        <option value="70">Lv.70</option>
-                        <option value="65">Lv.65</option>
-                        <option value="60">Lv.60</option>
+                        <option value=-1>默认</option>
+                        <option value=100>Lv.100</option>
+                        <option value=90>Lv.90</option>
+                        <option value=80>Lv.80</option>
+                        <option value=70>Lv.70</option>
+                        <option value=65>Lv.65</option>
+                        <option value=60>Lv.60</option>
                     </select>
                 </td>
                 <td>从者职介</td>
                 <td>
                     <select id="ddlClass">
-                        <option value="1.0">Saber</option>
-                        <option value="0.95">Archer</option>
-                        <option value="1.05">Lancer</option>
-                        <option value="1.0">Rider</option>
-                        <option value="0.9">Caster</option>
-                        <option value="0.9">Assassin</option>
-                        <option value="1.1">Berserker</option>
-                        <option value="1.1">Ruler</option>
-                        <option value="1.1">Avenger</option>
-                        <option value="1.0">Shielder</option>
-                        <option value="1.0">MoonCancer</option>
-                        <option value="1.0">Alterego</option>
-                        <option value="1.0">Foreigner</option>
+                        <option value=1>Saber</option>
+                        <option value=0.95>Archer</option>
+                        <option value=1.05>Lancer</option>
+                        <option value=1>Rider</option>
+                        <option value=0.9>Caster</option>
+                        <option value=0.9>Assassin</option>
+                        <option value=1.1>Berserker</option>
+                        <option value=1.1>Ruler</option>
+                        <option value=1.1>Avenger</option>
+                        <option value=1>Shielder</option>
+                        <option value=1>MoonCancer</option>
+                        <option value=1>Alterego</option>
+                        <option value=1>Foreigner</option>
                     </select>
                 </td>
                 <td>阵营</td>
@@ -66,9 +66,9 @@
                 <td>卡色</td>
                 <td>
                     <select id="ddlColor">
-                        <option value="0.8">Quick</option>
-                        <option value="1">Arts</option>
-                        <option value="1.5">Buster</option>
+                        <option value=0.8>Quick</option>
+                        <option value=1>Arts</option>
+                        <option value=1.5>Buster</option>
                     </select>
                 </td>
             </tr>           
@@ -113,11 +113,11 @@
                 <td>宝具等级</td>
                 <td>
                     <select id="ddlNpLevel">
-                        <option value="0">1</option>
-                        <option value="1">2</option>
-                        <option value="2">3</option>
-                        <option value="3">4</option>
-                        <option value="4">5</option>
+                        <option value=0>1</option>
+                        <option value=1>2</option>
+                        <option value=2>3</option>
+                        <option value=3>4</option>
+                        <option value=4>5</option>
                     </select>
                 </td>
                 <td>宝具倍率(%)</td>
@@ -143,49 +143,49 @@
                 <td>技能1</td>
                 <td>
                     <select id="ddlSkill1" onchange="bindSkill('1')">
-                        <option value="0">无</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
+                        <option value=0>无</option>
+                        <option value=1>1</option>
+                        <option value=2>2</option>
+                        <option value=3>3</option>
+                        <option value=4>4</option>
+                        <option value=5>5</option>
+                        <option value=6>6</option>
+                        <option value=7>7</option>
+                        <option value=8>8</option>
+                        <option value=9>9</option>
+                        <option value=10>10</option>
                     </select>
                 </td>
                 <td>技能2</td>
                 <td>
                     <select id="ddlSkill2" onchange="bindSkill('2')">
-                        <option value="0">无</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
+                        <option value=0>无</option>
+                        <option value=1>1</option>
+                        <option value=2>2</option>
+                        <option value=3>3</option>
+                        <option value=4>4</option>
+                        <option value=5>5</option>
+                        <option value=6>6</option>
+                        <option value=7>7</option>
+                        <option value=8>8</option>
+                        <option value=9>9</option>
+                        <option value=10>10</option>
                     </select>
                 </td>
                 <td>技能3</td>
                 <td>
                     <select id="ddlSkill3" onchange="bindSkill('3')">
-                        <option value="0">无</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
+                        <option value=0>无</option>
+                        <option value=1>1</option>
+                        <option value=2>2</option>
+                        <option value=3>3</option>
+                        <option value=4>4</option>
+                        <option value=5>5</option>
+                        <option value=6>6</option>
+                        <option value=7>7</option>
+                        <option value=8>8</option>
+                        <option value=9>9</option>
+                        <option value=10>10</option>
                     </select>
                 </td>
                 <td>Hit数</td>
@@ -228,7 +228,7 @@
                         <option value="1-8">Foreigner</option>
                     </select>
                     <label for="ckIsUndying1">
-                        <input type="checkbox" id="ckIsUndying1" value="1" /> 死灵
+                        <input type="checkbox" id="ckIsUndying1" /> 死灵
                     </label>
                 </td>
                 <td>敌人2</td>
@@ -249,7 +249,7 @@
                         <option value="1-8">Foreigner</option>
                     </select>
                     <label for="ckIsUndying2">
-                        <input type="checkbox" id="ckIsUndying2" value="1" /> 死灵
+                        <input type="checkbox" id="ckIsUndying2" /> 死灵
                     </label>
                 </td>
                 <td>敌人3</td>
@@ -270,7 +270,7 @@
                         <option value="1-8">Foreigner</option>
                     </select>
                     <label for="ckIsUndying3">
-                        <input type="checkbox" id="ckIsUndying3" value="1" /> 死灵
+                        <input type="checkbox" id="ckIsUndying3" /> 死灵
                     </label>
                 </td>
             </tr>
@@ -296,45 +296,45 @@
                 <td>敌人1阵营</td>
                 <td>
                     <select id="ddlEnemyAttribute1">
-                        <option value="0">默认</option>
-                        <option value="1">天</option>
-                        <option value="2">地</option>
-                        <option value="3">人</option>
-                        <option value="4">星</option>
-                        <option value="5">兽</option>
+                        <option value=0>默认</option>
+                        <option value=1>天</option>
+                        <option value=2>地</option>
+                        <option value=3>人</option>
+                        <option value=4>星</option>
+                        <option value=5>兽</option>
                     </select>
                     <label for="ckIsSpecialAttack1">
-                        <input type="checkbox" id="ckIsSpecialAttack1" value="1" /> 特攻
+                        <input type="checkbox" id="ckIsSpecialAttack1" /> 特攻
                     </label>
                     <input type="button" value="应用" id="btnApplyEnemy1" onclick="applyEnemy('1')"/>
                 </td>
                 <td>敌人2阵营</td>
                 <td>
                     <select id="ddlEnemyAttribute2">
-                        <option value="0">默认</option>
-                        <option value="1">天</option>
-                        <option value="2">地</option>
-                        <option value="3">人</option>
-                        <option value="4">星</option>
-                        <option value="5">兽</option>
+                        <option value=0>默认</option>
+                        <option value=1>天</option>
+                        <option value=2>地</option>
+                        <option value=3>人</option>
+                        <option value=4>星</option>
+                        <option value=5>兽</option>
                     </select>
                     <label for="ckIsSpecialAttack2">
-                        <input type="checkbox" id="ckIsSpecialAttack2" value="1" /> 特攻
+                        <input type="checkbox" id="ckIsSpecialAttack2" /> 特攻
                     </label>
                     <input type="button" value="应用" id="btnApplyEnemy2" onclick="applyEnemy('2')"/>
                 </td>
                 <td>敌人3阵营</td>
                 <td>
                     <select id="ddlEnemyAttribute3">
-                        <option value="0">默认</option>
-                        <option value="1">天</option>
-                        <option value="2">地</option>
-                        <option value="3">人</option>
-                        <option value="4">星</option>
-                        <option value="5">兽</option>
+                        <option value=0>默认</option>
+                        <option value=1>天</option>
+                        <option value=2>地</option>
+                        <option value=3>人</option>
+                        <option value=4>星</option>
+                        <option value=5>兽</option>
                     </select>
                     <label for="ckIsSpecialAttack3">
-                        <input type="checkbox" id="ckIsSpecialAttack3" value="1" /> 特攻
+                        <input type="checkbox" id="ckIsSpecialAttack3" /> 特攻
                     </label>
                     <input type="button" value="应用" id="btnApplyEnemy3" onclick="applyEnemy('3')"/>
                 </td>
@@ -472,7 +472,7 @@
     //圣杯MAX勾选框改变事件
     $("ckIsMaxGrail").onchange = function () {
         let id = $("ddlServant").value;
-        if (id == "-1") {
+        if (id == -1) {
             this.checked = false;
             return;
         }
@@ -492,7 +492,7 @@
     //等级下拉列表选中项改变事件
     $("ddlLvs").onchange=function(){
         let id=$("ddlServant").value;
-        if (id == "-1") {
+        if (id == -1) {
             this.selectedIndex = 0;
             return;
         }
@@ -555,7 +555,7 @@
     //宝具等级选中项发生变化事件
     $("ddlNpLevel").onchange = function () {
         let id = $("ddlServant").value;
-        if(id == "-1"){
+        if(id == -1){
             return;
         }
         changeNpCoefficient();
@@ -670,7 +670,7 @@
     var cardNpBase = [1, 3, 0];
     //计算宝具伤害
     function calc() {
-        if ($("ddlServant").value == "-1") {
+        if ($("ddlServant").value == -1) {
             alert("请选择从者")
             return;
         }
@@ -833,7 +833,7 @@
                 npGainBuff += 10;
 	}
 	//15.御主装备
-        npStrength += parseInt($("ddlMysticCode").value);
+        npStrength += getInt("ddlMysticCode");
 	switch($("ddlMysticCode").selectedIndex) {
 	    case 1:
 		attackBuff += 30;
