--- a/calc2.html
+++ b/calc2.html
@@ -142,7 +142,7 @@
 	    <tr>
                 <td>技能1</td>
                 <td>
-                    <select id="ddlSkill1" onchange="bindSkill('1')">
+                    <select id="ddlSkill1" oldvalue=0>
                         <option value=0>无</option>
                         <option value=1>1</option>
                         <option value=2>2</option>
@@ -158,7 +158,7 @@
                 </td>
                 <td>技能2</td>
                 <td>
-                    <select id="ddlSkill2" onchange="bindSkill('2')">
+                    <select id="ddlSkill2" oldvalue=0>
                         <option value=0>无</option>
                         <option value=1>1</option>
                         <option value=2>2</option>
@@ -174,7 +174,7 @@
                 </td>
                 <td>技能3</td>
                 <td>
-                    <select id="ddlSkill3" onchange="bindSkill('3')">
+                    <select id="ddlSkill3" oldvalue=0>
                         <option value=0>无</option>
                         <option value=1>1</option>
                         <option value=2>2</option>
@@ -624,6 +624,18 @@
         adjustOc();
 	this.oldvalue = this.value;
     };
+    $("ddlSkill1").onchange = function () {
+	changeSkill("1");
+	this.oldvalue = this.value;
+    }
+    $("ddlSkill2").onchange = function () {
+        changeSkill("2");
+        this.oldvalue = this.value;
+    }
+    $("ddlSkill3").onchange = function () {
+        changeSkill("3");
+        this.oldvalue = this.value;
+    }
     $("btnClearBuff").onclick = function() {
         clearBuff();
 	bindSkill("1");
@@ -676,7 +688,7 @@
         }
         guid++;
         //1.攻击力
-        let atk = getFloat("txtAttack") + getFloat("txtFouAtk") + getFloat("txtCraftEssenceAtk");
+        let atk = getInt("txtAttack") + getInt("txtFouAtk") + getInt("txtCraftEssenceAtk");
         //2.卡色
         let cardColor = getFloat("ddlColor");
         let cardNpCoef = cardNpBase[$("ddlColor").selectedIndex];
@@ -727,7 +739,7 @@
 	    case 12:
                 ClassResistMatrix = [1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 0.5, 2];
 	}
-        let nTarget = getFloat("txtNTarget");
+        let nTarget = getInt("txtNTarget");
         for(let i=1, l="";i<=nTarget;i++) {
 	    l = i.toString();
 	    ClassResist[i-1] = ClassResistMatrix[$("ddlEnemyClass"+l).selectedIndex];
@@ -891,7 +903,7 @@
         resultAvg = Math.floor(resultAvg);
 
 	let npGain = 0;
-	let nHits = getFloat("txtNHits");
+	let nHits = getInt("txtNHits");
 	for(let i=1, l="";i<=nTarget;i++){
 	    l = i.toString();
 	    let npGainBase = baseNp * cardNpCoef * (1 + npGainBuff / 100) * (1 + (cardBuff - cardResist[i-1]) / 100);
@@ -901,7 +913,7 @@
 	    }
 	    npGainNormal = Math.floor(npGainNormal * 100) / 100;
 	    let npGainOverkill = Math.floor(npGainNormal * 150) / 100;
-	    npGain += (npGainOverkill - npGainNormal) * getFloat("txtOverkill"+l) + npGainNormal * nHits;
+	    npGain += (npGainOverkill - npGainNormal) * getInt("txtOverkill"+l) + npGainNormal * nHits;
 	}
 
         let servantName = getDdlText("ddlServant");
