--- a/calc.html
+++ b/calc.html
@@ -305,7 +305,7 @@
 		    <input type="button" value="狐   狸" id="btnAddTamamo" />
 		    <input type="button" value="斯卡蒂" id="btnAddSkadi" />
 		    <input type="button" value="清   空" id="btnClearBuff" />
-                    <input type="button" value="计   算" id="btnCalcute" onclick="calc()" />
+                    <input type="button" value="计   算" id="btnCalculate" />
                 </td>
             </tr>
         </table>
@@ -435,16 +435,12 @@
     //宝具等级选中项发生变化事件
     $("ddlNpLevel").onchange = function () {
         let id = $("ddlServant").value;
-        if(id == -1){
-            return;
-        }
+        if(id == -1){ return; }
         changeNpCoefficient();
     };
     //礼装
     $("ddlCraftEssence").onchange=function(){
-        if(this.selectedIndex == 0) {
-            return;
-        }
+        if(this.selectedIndex == 0) { return; }
 	$("txtCraftEssenceAtk").value = parseInt(this.value);
         switch(this.selectedIndex) {
             case 6:
@@ -546,7 +542,7 @@
     var guid = 0;
     var cardNpBase = [1, 3, 0];
     //计算宝具伤害
-    function calc() {
+    $("btnCalculate").onclick = function () {
         if ($("ddlServant").value == -1) {
             alert("请选择从者")
             return;
